test/memory/shannon/memstatFlag.good
memstatFlag.chpl:6: error: invalid call to printMemStat(); rerun with --memTrack
