test/memory/shannon/memstatFlag.chpl
use Memory;

var m = 5;
var n = 2;

printMemStat();
m *= n;
writeln("m = ", m);

